--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "antd": "^4.16.11",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-kakao-login": "^2.1.0",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.0",
     "styled-reset": "^4.3.4",
