--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "@testing-library/user-event": "^12.1.10",
     "antd": "^4.16.11",
     "react": "^17.0.2",
+    "react-daum-postcode": "^2.0.6",
     "react-dom": "^17.0.2",
     "react-kakao-login": "^2.1.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.0",
     "styled-reset": "^4.3.4",
