--- a/package.json
+++ b/package.json
@@ -3,15 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@paypal/react-paypal-js": "^7.2.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "antd": "^4.16.11",
+    "axios": "^0.21.1",
+    "color-thief-react": "^2.1.0",
     "react": "^17.0.2",
     "react-daum-postcode": "^2.0.6",
     "react-dom": "^17.0.2",
+    "react-image-crop": "^9.0.2",
+    "react-kakao-login": "^2.1.0",
+    "react-naver-login": "^0.1.4",
+    "react-paypal-express-checkout": "^1.0.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "socket.io-client": "^4.1.3",
     "styled-components": "^5.3.0",
     "styled-reset": "^4.3.4",
     "web-vitals": "^1.0.1"
